apps/media/plex/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.228
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - name: http
      port: 32400
