apps/media/plex/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.euclid.stonegarden.dev`)
      kind: Rule
      services:
        - name: plex
          port: 80
